# redesigned-octo-adventure

./: .gitignore  Makefile  Makefile.am  configure.ac
src/: Makefile.am  bootstrap-tarballs.sh  utils.sh
src/utils/: Makefile.am  config.sh.in  logger.sh
tests/: Makefile.am  testsuite.at
